--- a/.github/workflows/reusable-nox.yml
+++ b/.github/workflows/reusable-nox.yml
@@ -13,7 +13,7 @@ jobs:
         include:
           - session: static
             python-versions: "3.11"
-            extra-args: --output-format=github --select=ALL
+            extra-args: "-- --output-format=github --select=ALL"
           - session: formatters_check
             python-versions: "3.11"
           - session: typing
