--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -32,12 +32,12 @@ jobs:
           event_json: "${{ toJSON(github.event) }}"
         run: |
           echo "${event_json}"
-      - name: Generate temp GITHUB_TOKEN
-        id: create_token
-        uses: tibdex/github-app-token@v2
-        with:
-          app_id: ${{ secrets.BOT_APP_ID }}
-          private_key: ${{ secrets.BOT_APP_KEY }}
+      # - name: Generate temp GITHUB_TOKEN
+      #   id: create_token
+      #   uses: tibdex/github-app-token@v2
+      #   with:
+      #     app_id: ${{ secrets.BOT_APP_ID }}
+      #     private_key: ${{ secrets.BOT_APP_KEY }}
       - name: Checkout parent repository
         uses: actions/checkout@v4
       - name: Install Python 3.11
@@ -55,15 +55,17 @@ jobs:
         if: "github.event.issue || inputs.type == 'issue'"
         env:
           event_json: "${{ toJSON(github.event) }}"
-          GITHUB_TOKEN: ${{ steps.create_token.outputs.token }}
+          # GITHUB_TOKEN: ${{ steps.create_token.outputs.token }}
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           number: "${{ github.event.issue.number || inputs.number }}"
         run: |
-          ./venv/bin/ad-triage issue "${number}"
+          ./venv/bin/ad-triage --owner gotmax23 issue "${number}"
       - name: "Run the PR labeler"
         if: "github.event.pull_request || inputs.type == 'pr'"
         env:
           event_json: "${{ toJSON(github.event) }}"
-          GITHUB_TOKEN: ${{ steps.create_token.outputs.token }}
+          # GITHUB_TOKEN: ${{ steps.create_token.outputs.token }}
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           number: "${{ github.event.number || inputs.number }}"
         run: |
-          ./venv/bin/ad-triage pr "${number}"
+          ./venv/bin/ad-triage --owner gotmax23 pr "${number}"
