restore default values for scheduled builds (#2430)
Follows up on 902f0605792b528926b4253adc01b6da314cad0e

--- a/.github/workflows/build-package-docs.yaml
+++ b/.github/workflows/build-package-docs.yaml
@@ -49,10 +49,10 @@ jobs:
     name: 📝 Build
     uses: ./.github/workflows/reusable-build-docs.yaml
     with:
-      repository-owner: ${{ github.event.inputs.repository-owner }}
-      repository-name:  ${{ github.event.inputs.repository-name }}
-      repository-branch: ${{ github.event.inputs.repository-branch }}
-      ansible-package-version: ${{ github.event.inputs.ansible-package-version }}
+      repository-owner: ${{ github.event.inputs.repository-owner || 'ansible' }}
+      repository-name:  ${{ github.event.inputs.repository-name || 'ansible-documentation' }}
+      repository-branch: ${{ github.event.inputs.repository-branch || 'devel' }}
+      ansible-package-version: ${{ github.event.inputs.ansible-package-version || 'devel' }}
     secrets:
       DOCS_BOT_TOKEN: ${{ secrets.DOCS_BOT_TOKEN }}
 
